--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,20 +4,20 @@
   <title>Web Page #1</title>
 </head>
   <body>
-    <h1>My first web page</h1>
-    <h2>Written with the guidance of <em>Epicodus</em></h2>
+    <h1>My <em>first</em> web page</h1>
+    <h2>Written with the <em>guidance</em> of <em>Epicodus</em></h2>
 
     <p>This is my <strong>first web page!</strong></p>
     <p>Isn't it nice?</p>
 
     <img src="img/download.jpeg" alt="A photo of a cute kitten.">
 
-    <p>Here are some things I'm going to learn about coding:</p>
+    <p>Here are some things I'm going to learn about <strong>coding</strong>:</p>
     <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>And a lot more!</li>
+      <li><em>HTML</em></li>
+      <li><em>CSS</em></li>
+      <li><em>JavaScript</em></li>
+      <li><em>And a lot more!</em></li>
     </ul>
 
 
