added new links

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -54,6 +54,9 @@
      <li>Black licorice (really!)</li>
    </ol>
 
+   <p>These are my favorite websites in the whole world:</p>
+  <ul>
+    <li><a href="http://www.google.com">Google</a></li>
    <p>Thanks for reading about me!</p>
   </body>
 </html>
